[build-system]
requires = ["setuptools>=81.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qunits"
version = "0.0.1"
description = "A verbose, performant and generic physical unit system"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
# license = {file = "LICENSE"}

keywords = ["physics", "units", "quantities", "dimensions"]
authors = [
    {name = "Patrick Müller", email = "pamueller.ikp@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    # "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = []

[project.urls]
homepage = "https://patmlr.github.io/qunits/"
documentation = "https://patmlr.github.io/qunits/doc/doc.html"
download = "https://pypi.org/project/qunits/#files"
source = "https://github.com/patmlr/qunits"
tracker = "https://github.com/patmlr/qunits/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["qunits", "qunits.*"]

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "docs/*",
    "__init__.py",
]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "ANN",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "NPY",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "TC",
    "TID",
    "UP",
]

ignore = [
    "ANN003",
    "ANN401",
    "E741",
    "RUF012",
]

[tool.ruff.lint.isort]
known-first-party = ["qunits"]
